Fix readability in tight screen such as smartphone screen

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ nav a:hover {
 
 main {
     margin: 0 auto;
+    padding: 0 2rem;
     max-width: 75rem;
     align-content: center;
 }
